Adicionado o método de listar amigos